--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -41,21 +41,26 @@ header a {
     margin: 1rem 1rem auto auto;
 }
 
-nav {
+.nav {
     grid-area: 2/1/3/4;
     background-color: #3a3a3a;
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
+    padding: 1rem;
 }
 
-nav a {
+.nav li {
+    list-style: none;
+}
+
+.nav a {
     color: white;
     text-decoration: none;
     padding: 1rem;
 }
 
-nav a:hover {
+.nav a:hover {
     background-color: #4c96d7;
     color: #3a3a3a;
 }
