--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -3,335 +3,401 @@
 * Copyright: 2023       *
 * PHP Motors assignment *
 ************************/
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+#form-title {
+  grid-area: 1/1/2/5;
+  margin-left: 1em;
+}
 
+.form-container {
+  grid-area: 2/1/3/5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2em;
+}
+
+form {
+  width: 75%;
+  padding: 2em;
+  background: #fff;
+  border-radius: 0.25em;
+  box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
+}
+
+input, select {
+  padding: 0.5em;
+  font-size: 0.875em;
+  font-family: inherit;
+  background: #f4f4f4;
+  border: 1px solid #ccc;
+  border-width: 1px 1px 1px 0;
+  border-radius: 0;
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  transition: 0.3s;
+}
+
+input:focus,
+select:focus {
+  background: #fff;
+  box-shadow: inset 0.1em 0.1em 0.25em #a6cbeb;
+  outline: 0;
+}
+
+.form-field {
+  display: flex;
+  margin-bottom: 1em;
+}
+
+.form-field label {
+  flex: 0 1 7em;
+  padding: 1em;
+  background: #2f5d85;
+  border: 1px solid #4c96d7;
+  color: #fff;
+  font-size: 0.75em;
+  text-align: center;
+  line-height: 1;
+}
+
+.form-field input,
+.form-field select {
+  flex: 1;
+}
+
+.form-field label {
+  border-radius: 0.25em 0 0 0.25em;
+}
+
+.input-right input,
+.input-right select,
+.multi-input input:last-child,
+.multi-input select:last-child {
+  border-radius: 0 0.25em 0.25em 0;
+}
+
+.submit-field {
+  flex-direction: row-reverse;
+}
+
+input[type=submit] {
+  flex: 0 1 40%;
+  padding: 0.5em;
+  font-size: 1rem;
+  font-family: inherit;
+  text-shadow: 0 1px 0 #fff;
+  background: #a6cbeb;
+  border-radius: 0.25em;
+  border: 0;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  color: #fff;
+  background: #4c96d7;
+  text-shadow: 0 1px 0 #000;
+}
+
+@media screen and (min-width: 551px) and (max-width: 850px) {
+  #name {
+    grid-row: 2;
+    grid-column: 1/3;
+  }
+  #car {
+    grid-area: 2/1/4/5;
+  }
+  #button {
+    position: absolute;
+    top: 21rem;
+    left: 2rem;
+  }
+  #upgrades {
+    grid-area: 4/1/5/3;
+    margin: 0.5em auto;
+  }
+  #upgrade-card {
+    grid-area: 5/1/7/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.2rem;
+    justify-items: center;
+  }
+  #reviews {
+    grid-area: 4/3/5/5;
+    margin-left: 0.1em;
+  }
+  #reviews-list {
+    grid-area: 5/3/7/5;
+    line-height: 150%;
+  }
+  #one {
+    grid-area: 1/1/2/2;
+  }
+  #one-p {
+    grid-area: 2/1/3/2;
+  }
+  #two {
+    grid-area: 1/2/2/3;
+  }
+  #two-p {
+    grid-area: 2/2/3/3;
+  }
+  #three {
+    grid-area: 3/1/4/2;
+  }
+  #three-p {
+    grid-area: 4/1/5/2;
+  }
+  #four {
+    grid-area: 3/2/4/3;
+  }
+  #four-p {
+    grid-area: 4/2/5/3;
+  }
+}
+@media screen and (min-width: 851px) {
+  #name {
+    grid-row: 2;
+    grid-column: 1/3;
+  }
+  #car {
+    grid-area: 2/1/4/5;
+  }
+  #button {
+    position: relative;
+    top: -27em;
+    left: -80%;
+    width: 10em;
+  }
+  #upgrades {
+    grid-area: 4/1/5/3;
+    margin: 0.5em auto;
+  }
+  #upgrade-card {
+    grid-area: 5/1/7/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.2rem;
+    justify-items: center;
+  }
+  #reviews {
+    grid-area: 4/3/5/5;
+    margin-left: 0.1em;
+  }
+  #reviews-list {
+    grid-area: 5/3/7/5;
+    line-height: 150%;
+  }
+  #one {
+    grid-area: 1/1/2/2;
+  }
+  #one-p {
+    grid-area: 2/1/3/2;
+  }
+  #two {
+    grid-area: 1/2/2/3;
+  }
+  #two-p {
+    grid-area: 2/2/3/3;
+  }
+  #three {
+    grid-area: 3/1/4/2;
+  }
+  #three-p {
+    grid-area: 4/1/5/2;
+  }
+  #four {
+    grid-area: 3/2/4/3;
+  }
+  #four-p {
+    grid-area: 4/2/5/3;
+  }
+}
 /**************
 * Base Styles *
 **************/
-
 html {
-    background-image: url(../images/checkerboard.jpg);
-    background-repeat: repeat;
-    background-size: 25%;
+  background-image: url(../images/checkerboard.jpg);
+  background-repeat: repeat;
+  background-size: 25%;
 }
 
 body {
-    border: 4px solid #4c96d7;
-    border-radius: 5px;
-    background-color: white;
-    max-width: 1000px;
-    margin: 2rem auto;
-    font-family: "Audiowide", sans-serif;
-    font-size: 1rem;
-
+  border: 4px solid #4c96d7;
+  border-radius: 5px;
+  background-color: white;
+  max-width: 1000px;
+  margin: 2rem auto;
+  font-family: "Audiowide", sans-serif;
+  font-size: 1rem;
 }
 
 header {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
 }
 
 header a {
-    text-decoration: none;
-    color:#3a3a3a;
-    grid-column: 3;
+  text-decoration: none;
+  color: #3a3a3a;
+  grid-column: 3;
 }
 
 #account {
-    margin: 1rem 1rem auto auto;
+  margin: 1rem 1rem auto auto;
 }
 
 .nav {
-    grid-area: 2/1/3/4;
-    background-color: #3a3a3a;
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    padding: 1rem;
+  grid-area: 2/1/3/4;
+  background-color: #3a3a3a;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 1rem;
 }
 
 .nav li {
-    list-style: none;
+  list-style: none;
 }
 
 .nav a {
-    color: white;
-    text-decoration: none;
-    padding: 1rem;
+  color: white;
+  text-decoration: none;
+  padding: 1rem;
 }
 
 .nav a:hover {
-    background-color: #4c96d7;
-    color: #3a3a3a;
+  background-color: #4c96d7;
+  color: #3a3a3a;
 }
 
 main {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 #content-title {
-    color: #3a3a3a;
-    grid-column: 1/5;
-    margin: 1rem;
+  color: #3a3a3a;
+  grid-column: 1/5;
+  margin: 1rem;
 }
 
 #name {
-    color: #2f5d85;
-    padding: 0 2rem;
-    grid-row: 2;
-    grid-column: 1;
-    z-index: 1;
+  color: #2f5d85;
+  padding: 0 2rem;
+  grid-row: 2;
+  grid-column: 1;
+  z-index: 1;
 }
 
 #car img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 button {
-    background-color: #a6cbeb;
-    border: 1px solid #3a3a3a;
-    color: #3a3a3a;
-    padding: .5rem 1rem;
-    margin-top: 1em;
+  background-color: #a6cbeb;
+  border: 1px solid #3a3a3a;
+  color: #3a3a3a;
+  padding: 0.5rem 1rem;
+  margin-top: 1em;
 }
 
 #one, #two, #three, #four {
-    background-color: #4c96d7;
-    width: 100%;
+  background-color: #4c96d7;
+  width: 100%;
 }
 
-#one-p, #two-p, #three-p, #four-p { 
-    text-decoration: underline;
+#one-p, #two-p, #three-p, #four-p {
+  text-decoration: underline;
 }
 
 #one img, #two img, #three img, #four img {
-    margin: .2rem 0;
-    justify-self: center;
+  margin: 0.2rem 0;
+  justify-self: center;
 }
 
 .bold {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 footer {
-    border-top: 3px solid #8d8d8d;
-    text-align: center;
+  border-top: 3px solid #8d8d8d;
+  text-align: center;
 }
 
 /********************
 * Responsive Styles *
 ********************/
-    
-    #name {
-    grid-area: 2/1/3/3;
-    }
-
-    #car {
-        grid-area: 2/1/4/5;
-    }
-
-    #button {
-        grid-area: 4/2/5/4;
-        max-width: 70%;
-        justify-self: center;
-    }
-
-    #upgrades {
-        grid-area: 7/1/8/5;
-        margin: .5em auto;
-    }
-
-    #upgrade-card {
-        grid-area: 8/1/9/5;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: .2rem;
-        justify-items: center;
-    }
-
-    #reviews {
-        grid-area: 5/1/6/5;
-        margin-left: .1em;
-    }
-
-    #reviews-list {
-        grid-area: 6/1/7/5;
-        line-height: 150%;
-    }
-
-    #one {
-        grid-area: 1/1/2/2;
-    }
-
-    #one-p {
-        grid-area: 2/1/3/2;
-    }
-
-    #two {
-        grid-area: 1/2/2/3;
-    }
-    #two-p {
-        grid-area: 2/2/3/3;
-    }
-
-    #three {
-        grid-area: 3/1/4/2;
-    }
-
-    #three-p {
-        grid-area: 4/1/5/2;
-    }
-
-    #four {
-        grid-area: 3/2/4/3;
-    }
-
-    #four-p {
-        grid-area: 4/2/5/3;
-    }
-
-@media screen and (min-width: 551px) and (max-width: 850px) {
-
-    #name {
-        grid-row: 2;
-        grid-column: 1/3;
-    }
-    
-    #car {
-        grid-area: 2/1/4/5;
-    }
-
-    #button {
-        position: absolute;
-        top: 21rem;
-        left: 2rem;
-    }
-
-    #upgrades {
-        grid-area: 4/1/5/3;
-        margin: .5em auto;
-    }
-
-    #upgrade-card {
-        grid-area: 5/1/7/3;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: .2rem;
-        justify-items: center;
-    }
-
-    #reviews {
-        grid-area: 4/3/5/5;
-        margin-left: .1em;
-    }
-
-    #reviews-list {
-        grid-area: 5/3/7/5;
-        line-height: 150%;
-    }
-
-    #one {
-        grid-area: 1/1/2/2;
-    }
-
-    #one-p {
-        grid-area: 2/1/3/2;
-    }
-
-    #two {
-        grid-area: 1/2/2/3;
-    }
-    #two-p {
-        grid-area: 2/2/3/3;
-    }
-
-    #three {
-        grid-area: 3/1/4/2;
-    }
-
-    #three-p {
-        grid-area: 4/1/5/2;
-    }
-
-    #four {
-        grid-area: 3/2/4/3;
-    }
-
-    #four-p {
-        grid-area: 4/2/5/3;
-    }
+#name {
+  grid-area: 2/1/3/3;
 }
 
-@media screen and (min-width: 851px) {
-
-    #name {
-        grid-row: 2;
-        grid-column: 1/3;
-    }
-    
-    #car {
-        grid-area: 2/1/4/5;
-    }
-
-    #button {
-        position: relative;
-        top: -27em;
-        left: -80%;
-        width: 10em;
-    }
-
-    #upgrades {
-        grid-area: 4/1/5/3;
-        margin: .5em auto;
-    }
-
-    #upgrade-card {
-        grid-area: 5/1/7/3;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: .2rem;
-        justify-items: center;
-    }
-
-    #reviews {
-        grid-area: 4/3/5/5;
-        margin-left: .1em;
-    }
-
-    #reviews-list {
-        grid-area: 5/3/7/5;
-        line-height: 150%;
-    }
-
-    #one {
-        grid-area: 1/1/2/2;
-    }
-
-    #one-p {
-        grid-area: 2/1/3/2;
-    }
-
-    #two {
-        grid-area: 1/2/2/3;
-    }
-    #two-p {
-        grid-area: 2/2/3/3;
-    }
-
-    #three {
-        grid-area: 3/1/4/2;
-    }
-
-    #three-p {
-        grid-area: 4/1/5/2;
-    }
-
-    #four {
-        grid-area: 3/2/4/3;
-    }
-
-    #four-p {
-        grid-area: 4/2/5/3;
-    }
+#car {
+  grid-area: 2/1/4/5;
 }
+
+#button {
+  grid-area: 4/2/5/4;
+  max-width: 70%;
+  justify-self: center;
+}
+
+#upgrades {
+  grid-area: 7/1/8/5;
+  margin: 0.5em auto;
+}
+
+#upgrade-card {
+  grid-area: 8/1/9/5;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.2rem;
+  justify-items: center;
+}
+
+#reviews {
+  grid-area: 5/1/6/5;
+  margin-left: 0.1em;
+}
+
+#reviews-list {
+  grid-area: 6/1/7/5;
+  line-height: 150%;
+}
+
+#one {
+  grid-area: 1/1/2/2;
+}
+
+#one-p {
+  grid-area: 2/1/3/2;
+}
+
+#two {
+  grid-area: 1/2/2/3;
+}
+
+#two-p {
+  grid-area: 2/2/3/3;
+}
+
+#three {
+  grid-area: 3/1/4/2;
+}
+
+#three-p {
+  grid-area: 4/1/5/2;
+}
+
+#four {
+  grid-area: 3/2/4/3;
+}
+
+#four-p {
+  grid-area: 4/2/5/3;
+}
+
+/*# sourceMappingURL=motors.css.map */
