--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -101,8 +101,27 @@ input[type=submit]:hover {
   text-shadow: 0 1px 0 #000;
 }
 
+input[type=select] {
+  flex: 0 1 80%;
+}
+
+textarea {
+  flex: 0 1 80%;
+}
+
 input:required {
   background-color: rgb(247, 247, 179);
+}
+
+button {
+  margin: auto;
+  padding: 1rem;
+  border-radius: 0.5em;
+}
+
+button a {
+  text-decoration: none;
+  color: black;
 }
 
 /**************
