--- a/phpmotors/styles/base.scss
+++ b/phpmotors/styles/base.scss
@@ -30,10 +30,10 @@ body {
     border-radius: 5px;
     background-color: white;
     max-width: 1000px;
+    min-width: 500px;
     margin: 2rem auto;
     font-family: "Audiowide", sans-serif;
     font-size: 1rem;
-
 }
 
 header {
