--- a/phpmotors/styles/form.scss
+++ b/phpmotors/styles/form.scss
@@ -8,6 +8,7 @@ $accent: #a6cbeb;
     grid-area: 1/1/2/5;
     margin-left: 1em;
 }
+
 .form-container {
     grid-area: 2/1/3/5;
 	display:flex;
@@ -15,13 +16,15 @@ $accent: #a6cbeb;
 	align-items:center;
 	margin-bottom: 2em;	
 }
+
 form {
-	width:75%;
+	max-width:75%;
 	padding:2em;
 	background:#fff;
 	border-radius:0.25em;
 	box-shadow:0 0 2em rgba(0,0,0,0.2)
 }
+
 input, select {
 	padding:0.5em;
 	font-size:0.875em;
@@ -35,6 +38,7 @@ input, select {
 	appearance:textfield;
 	transition:0.3s;
 }
+
 input:focus,
 select:focus {
 	background:#fff;
@@ -46,37 +50,40 @@ select:focus {
 	display:flex;
 	margin-bottom:1em;
 }
+
 .form-field label {
 	flex: 0 1 7em;
 	padding:1em;
-
 	background: $dark;
 	border:1px solid $light;
     color: #fff;
-
 	font-size:0.75em;
 	text-align:center;
 	line-height:1;
 }
+
 .form-field input,
 .form-field select {
-	flex:1;
+	flex:1 1;
 }
 
 .form-field label {
 	border-radius:0.25em 0 0 0.25em;
 }
+
 .input-right input,
 .input-right select,
 .multi-input input:last-child,
 .multi-input select:last-child {
  	border-radius:0 0.25em 0.25em 0;
 }
+
 .submit-field {
 	flex-direction:row-reverse;
 }
+
 input[type="submit"] {
-	flex:0 1 40%;
+	flex:0 1 20%;
 	padding:0.5em;
 	font-size:1rem;
 	font-family:inherit;
@@ -87,17 +94,21 @@ input[type="submit"] {
 	transition:0.3s;
 	cursor:pointer;
 }
+
 input[type="submit"]:hover {
 	color:#fff;
 	background: $light;
 	text-shadow:0 1px 0 #000;
 }
+
 input[type="select"] {
 	flex:0 1 80%;
 }
+
 textarea {
-	flex:0 1 80%;
+	flex:0 1 85%;
 }
+
 input:required {
 	background-color: rgb(247, 247, 179);
 }
