--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -18,7 +18,7 @@
 }
 
 form {
-  width: 75%;
+  max-width: 75%;
   padding: 2em;
   background: #fff;
   border-radius: 0.25em;
@@ -64,7 +64,7 @@ select:focus {
 
 .form-field input,
 .form-field select {
-  flex: 1;
+  flex: 1 1;
 }
 
 .form-field label {
@@ -83,7 +83,7 @@ select:focus {
 }
 
 input[type=submit] {
-  flex: 0 1 40%;
+  flex: 0 1 20%;
   padding: 0.5em;
   font-size: 1rem;
   font-family: inherit;
@@ -106,7 +106,7 @@ input[type=select] {
 }
 
 textarea {
-  flex: 0 1 80%;
+  flex: 0 1 85%;
 }
 
 input:required {
@@ -138,6 +138,7 @@ body {
   border-radius: 5px;
   background-color: white;
   max-width: 1000px;
+  min-width: 500px;
   margin: 2rem auto;
   font-family: "Audiowide", sans-serif;
   font-size: 1rem;
