--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -137,10 +137,19 @@ input:required:valid {
 }
 
 #password.expanded {
+  animation: colorChange 1s ease-in-out 1;
   display: block;
   color: red;
 }
 
+@keyframes colorChange {
+  from {
+    color: white;
+  }
+  to {
+    color: red;
+  }
+}
 /**************
 * Base Styles *
 **************/
