--- a/phpmotors/styles/base.scss
+++ b/phpmotors/styles/base.scss
@@ -47,7 +47,7 @@ header a {
     grid-column: 3;
 }
 
-#account {
+.account {
     margin: 1rem 1rem auto auto;
 }
 
@@ -84,6 +84,10 @@ main {
     color: $text;
     grid-column: 1/5;
     margin: 1rem;
+}
+
+.message {
+    margin-left: 1rem;
 }
 
 #name {
