--- a/phpmotors/styles/form.scss
+++ b/phpmotors/styles/form.scss
@@ -12,6 +12,9 @@ $accent: #a6cbeb;
 .form-container {
     grid-area: 2/1/3/5;
 	margin-bottom: 2em;	
+	& h2 {
+		margin-left: 1.5em;
+	}
 }
 
 form {
@@ -21,6 +24,10 @@ form {
 	background:#fff;
 	border-radius:0.25em;
 	box-shadow:0 0 2em rgba(0,0,0,0.2)
+}
+
+legend, td {
+	padding: 0 .5rem;
 }
 
 input, select {
