--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -13,6 +13,9 @@
   grid-area: 2/1/3/5;
   margin-bottom: 2em;
 }
+.form-container h2 {
+  margin-left: 1.5em;
+}
 
 form {
   max-width: 80%;
@@ -21,6 +24,10 @@ form {
   background: #fff;
   border-radius: 0.25em;
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
+}
+
+legend, td {
+  padding: 0 0.5rem;
 }
 
 input, select {
