--- a/phpmotors/styles/form.scss
+++ b/phpmotors/styles/form.scss
@@ -1,8 +1,4 @@
-//create variables
-$dark: #2f5d85;
-$light: #4c96d7;
-$text: #3a3a3a;
-$accent: #a6cbeb;
+/* Styles specific to forms and tables */
 
 #form-title {
     grid-area: 1/1/2/5;
