--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -482,6 +482,8 @@ footer {
 #thumbs {
   display: flex;
   flex-grow: 1;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   justify-content: space-around;
   margin-bottom: 1rem;
 }
@@ -493,7 +495,7 @@ footer {
   transition: transform 1s;
 }
 .smallImage:hover {
-  transform: scale(1.5, 1.5);
+  transform: scale(1.2, 1.2);
 }
 
 @media screen and (min-width: 551px) and (max-width: 850px) {
