--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -498,6 +498,16 @@ footer {
   transform: scale(1.2, 1.2);
 }
 
+.reviewText {
+  padding: 1rem;
+  border: 3px solid #2f5d85;
+  margin: 0.5rem auto;
+}
+
+.reviewText :not(p) {
+  color: #2f5d85;
+}
+
 @media screen and (min-width: 551px) and (max-width: 850px) {
   #name {
     grid-row: 2;
