--- a/phpmotors/styles/motors.css
+++ b/phpmotors/styles/motors.css
@@ -95,7 +95,7 @@ select:focus {
 input[type=submit] {
   flex: 0 1 20%;
   padding: 0.5em;
-  margin-top: 1rem;
+  margin: 1rem 1rem 0 0;
   font-size: 1rem;
   font-family: inherit;
   text-shadow: 0 1px 0 #fff;
